--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,16 @@
     <title>Countries of the World</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/bundle.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Chakra+Petch" rel="stylesheet">
   </head>
   <body>
-    <h1>Countries of the World</h1>
+    <h1 class="title">Countries of the World</h1>
     <label for="countries">Select a country:</label>
-    <select id="countries">
-      <option selected disabled></option>
-    </select>
+    <div class="dropdown">
+      <select id="countries">
+        <option selected disabled></option>
+      </select>
+    </div>
     <div id="country"><div>
   </body>
 </html>
